--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,11 +3,11 @@ services:
   dev-postgres:
     image: postgres:15.1-alpine
     ports:
-      - 5434:5432
+      - 5436:5432
     environment:
-      POSTGRES_USER: lineapi
-      POSTGRES_PASSWORD: lineapi
-      POSTGRES_DB: lineapi
+      POSTGRES_USER: Logbook
+      POSTGRES_PASSWORD: Logbook
+      POSTGRES_DB: Logbook
     restart: always
     networks:
       - lesson
