--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,5 +11,14 @@ services:
     restart: always
     networks:
       - lesson
+  redis:
+    image: "redis:latest"
+    ports:
+      - "6379:6379"
+    volumes:
+      - "./data/redis:/data"
+    restart: always
+    networks:
+      - lesson
 networks:
   lesson:
